update after finish mac test

--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
-    "apps": [
-        "zsh",
-        ],
+    "packages": [
+        "zsh"
+    ],
+    "rc_files": [
+        ".bashrc",
+        ".zshrc"
+    ]
 }
