--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
     "packages": [
-        "zsh"
+        "zsh",
+        "git",
+        "screen"
     ],
     "rc_files": [
         ".bashrc",
