--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
         "screen"
     ],
     "rc_files": [
-        ".bashrc",
-        ".zshrc"
+        ".zshrc",
+        ".vim",
+        ".screenrc"
     ]
 }
